<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_layout_margin"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filter_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_around_item"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/meal_type_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/meal_type"
                    app:icon="@drawable/ic_add_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cuisine_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/cuisine"
                    app:icon="@drawable/ic_add_24" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/diet_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/diet"
                android:layout_marginTop="@dimen/margin_around_item"
                app:icon="@drawable/ic_add_24" />

            <TextView
                android:id="@+id/max_prepare_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_around_item"
                android:text="Maximum prepare time" />


            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_around_item"
                android:stepSize="@string/slider_time_value_step"
                android:value="@string/slider_time_default_value"
                android:valueFrom="@string/slider_time_value_from"
                android:valueTo="@string/slider_time_value_to"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_button" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>