<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/meal_breakfast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/meal_breakfast"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_breakfast" />

    <TextView
        android:id="@+id/meal_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/meal_main_meal"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_food" />

    <TextView
        android:id="@+id/meal_beverage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/meal_beverage"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_coffee" />

    <TextView
        android:id="@+id/meal_snack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/meal_snack"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/ic_cookies" />

</LinearLayout>